# csharp-electron-sample

./: .gitignore  README.md  build.bat  build.sh  electron.bat  tauri-dev.bat  tauri-dev.sh  tauri.bat  tauri.sh  web.bat
Server/: Program.cs
Server/Properties/: launchSettings.json
electron/: main.js  package-lock.json  package.json  preload.js  tsconfig.json
electron/src/: main.ts  preload.ts
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  electron.d.ts  tauri.d.ts  tauri.ts
tauri/: .gitignore  README.md  package-lock.json  package.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: lib.rs
